<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/device_bar_color"
        android:textSize="@dimen/text_size_20" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/style_et_login_reg_no_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_larger"
        android:hint="@string/enter_phone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:background="@color/bg_color_gray" />

    <EditText
        android:id="@+id/et_pwd"
        style="@style/style_et_login_reg_no_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/enter_pwd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:background="@color/bg_color_gray" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:background="@drawable/tv_border_radius_black"
        android:gravity="center"
        android:minHeight="@dimen/dimen_40"
        android:text="@string/login"
        android:textColor="@color/device_bar_color"
        android:textSize="@dimen/text_size_18" />


    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forget_pwd"
            android:textColor="@color/device_bar_color"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textColor="@color/device_bar_color"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>
</LinearLayout>
