<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:minHeight="@dimen/dimen_50"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_phone"
            style="@style/style_et_login_reg_no_margin_no_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40"
            android:background="@drawable/tv_no_border_radius"
            android:gravity="center"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:text="@string/get_verify_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:background="@color/bg_color_gray" />

    <EditText
        android:id="@+id/et_verify_code"
        style="@style/style_et_login_reg_no_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_larger"
        android:hint="@string/enter_get_verify_code" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:background="@color/bg_color_gray" />
</LinearLayout>